Site template commit

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <!--
 	Binary by TEMPLATED
 	templated.co @templatedco
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Binary by TEMPLATED</title>
+		<title>Gabriele's Guide to the Galaxy</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="logo"><strong>Binary</strong> by TEMPLATED</a>
+				<a href="index.html" class="logo"><strong>Gabriele's Guide to the Galaxy</strong> aka GGG</a>
 				<nav>
 					<a href="#menu">Menu</a>
 				</nav>
