--- a/index.html
+++ b/index.html
@@ -39,7 +39,14 @@
 					</ul>
 				</div>
 			</section>
-
+			<section id="banner2">
+				<div class="inner">
+					<h1>Labas Eimantai, Vanage</a></h1>
+					<ul class="actions">
+						<li><a href="#one" class="button alt scrolly big">Continue</a></li>
+					</ul>
+				</div>
+			</section>
 		
 
 		<!-- Footer -->
